# tokyo-tochijihai-2025

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
ai-agent-server/: .env.local  .gitignore  API_README.md  Dockerfile  Makefile  RAG_README.md  README.md  TEST_README.md  __init__.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.py  start.sh
ai-agent-server/app/: .dockerignore  Dockerfile  __init__.py  entrypoint.py  main.py  requirements.txt
ai-agent-server/app/api/: __init__.py
ai-agent-server/app/api/models/: __init__.py  schemas.py
ai-agent-server/app/api/routes/: __init__.py  chat.py  health.py  pdf.py  rag.py  wifi.py
ai-agent-server/app/config/: __init__.py  settings.py
ai-agent-server/app/core/: __init__.py
ai-agent-server/app/core/data/: __init__.py
ai-agent-server/app/core/data/loaders/: __init__.py  csv_loader.py  excel_loader.py  pdf_loader.py
ai-agent-server/app/core/data/processors/: __init__.py  geo_utils.py
ai-agent-server/app/core/llm/: __init__.py  ollama.py  openai.py
ai-agent-server/app/core/rag/: __init__.py  base.py  disaster_prevention.py  evacuation.py  wifi.py
ai-agent-server/app/utils/: __init__.py  helpers.py
ai-agent-server/client/: README.md  rag_client.py  simple_examples.py  usage_examples.py
ai-agent-server/examples/: README.md  pyproject.toml  test_api.py  test_pdf_rag_api.py  test_rag_api.py  test_wifi_rag_api.py
ai-agent-server/scripts/: pull_models.sh  start_fastapi.sh  start_ollama.sh  stop_ollama.sh
ai-agent-server/tests/: conftest.py  test_chat.py  test_error_handling.py  test_health.py  test_rag.py  test_streaming.py
data-source/: README.md  消火栓一覧.csv  無料Wifi.csv  給水拠点一覧.csv  都立一時滞在施設一覧 .csv  都立一時滞在施設一覧(緯度:経度あり).csv
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  components.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/public/: test-map.html
server/: .env.example  .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
(+89 files in other folders)
